@@ -13,13 +13,13 @@ typedef struct {
 
 	cauldron_plugin_config *(*init)(void);
 	void     (*destroy)(cauldron_plugin_config *user_data);
-	int      (*add_options)(GOptionContext *option_ctx, cauldron_plugin_config *user_data);
+	GOptionEntry * (*get_options)(cauldron_plugin_config *user_data);
 	int      (*apply_config)(gpointer srv, cauldron_plugin_config * user_data); /* network_mysqld, ... */
 } cauldron_plugin;
 
 cauldron_plugin *cauldron_plugin_init(void);
 cauldron_plugin *cauldron_plugin_load(const gchar *plugin_dir, const gchar *name);
 void cauldron_plugin_free(cauldron_plugin *p);
-int cauldron_plugin_add_options(cauldron_plugin *p, GOptionContext *option_ctx);
+GOptionEntry * cauldron_plugin_get_options(cauldron_plugin *p);
 
 #endif
