@@ -62,7 +62,6 @@ int network_mysqld_con_handle_stmt(network_mysqld *srv, network_mysqld_con *con,
 	GPtrArray *fields;
 	GPtrArray *rows;
 	GPtrArray *row;
-	gsize packet_len = (s->str[0] << 0) | (s->str[1] << 8) | (s->str[2] << 16);
 
 #define C(x) x, sizeof(x) -1
 	
@@ -255,11 +254,10 @@ static void network_mysqld_admin_plugin_free(cauldron_plugin_config *config) {
 /**
  * add the proxy specific options to the cmdline interface 
  */
-static int network_mysqld_admin_plugin_add_options(GOptionContext *option_ctx, cauldron_plugin_config *config) {
-	GOptionGroup *option_grp;
+static GOptionEntry * network_mysqld_admin_plugin_get_options(cauldron_plugin_config *config) {
 	guint i;
 
-	GOptionEntry config_entries[] = 
+	static GOptionEntry config_entries[] = 
 	{
 		{ "admin-address",            0, 0, G_OPTION_ARG_STRING, NULL, "listening address:port of the admin-server (default: :4040)", "<host:port>" },
 		
@@ -269,11 +267,7 @@ static int network_mysqld_admin_plugin_add_options(GOptionContext *option_ctx, c
 	i = 0;
 	config_entries[i++].arg_data = &(config->address);
 
-	option_grp = g_option_group_new("admin", "admin-module", "Show options for the admin-module", NULL, NULL);
-	g_option_group_add_entries(option_grp, config_entries);
-	g_option_context_add_group(option_ctx, option_grp);
-
-	return 0;
+	return config_entries;
 }
 
 /**
@@ -324,19 +318,11 @@ int plugin_init(cauldron_plugin *p) {
 	/* append the our init function to the init-hook-list */
 
 	p->init         = network_mysqld_admin_plugin_init;
-	p->add_options  = network_mysqld_admin_plugin_add_options;
+	p->get_options  = network_mysqld_admin_plugin_get_options;
 	p->apply_config = network_mysqld_admin_plugin_apply_config;
 	p->destroy      = network_mysqld_admin_plugin_free;
 
 	return 0;
-}
-
-const char *g_module_check_init(GModule *module) {
-	return NULL;
-}
-
-const char *g_module_unload(GModule *module) {
-	return NULL;
 }
 
 
